more notes added to misc

--- a/notes/misc_notes.html
+++ b/notes/misc_notes.html
@@ -998,5 +998,301 @@
 	<p class="aphorism_date">January 25, 2020</p>
 </div>
 
+<div>
+	<p>The real political horseshoe is the two poles of a totalizing "market" pattern and exhaustive command-and-control economics.</p>
+	<hr />
+	<p class="aphorism_date">January 24, 2020</p>
+</div>
+
+<div>
+	<p>I often think that matehmatics is too important to put off until 30 but then sometimes I think it's too dangerous to study in one's 20s.</p>
+	<hr />
+	<p class="aphorism_date">January 24, 2020</p>
+</div>
+
+<div>
+	<p>Intuition and rationality are about neither x nor f(x) but the ocmposition of f.  Phenomenology&mdash;f(x)&mdash;is no escape from the frailty of induction.</p>
+	<hr />
+	<p class="aphorism_date">January 21, 2020</p>
+</div>
+
+<div>
+	<p>Any cogent economic critique requires understanding that money is a syntactic, not a semantic idea.</p>
+	<hr />
+	<p class="aphorism_date">January 21, 2020</p>
+</div>
+
+<div>
+	<p>Laminar flow is just a platonic shadow of compositionality.</p>
+	<hr />
+	<p class="aphorism_date">January 20, 2020</p>
+</div>
+
+<div>
+	<p>Philosophy, like literature, is not about correct answers: it's about facilitating a richer relationship between reader and world.</p>
+	<p>Reading is ontography.</p>
+	<hr />
+	<p class="aphorism_date">January 18, 2020</p>
+</div>
+
+<div>
+	<p>attention = patterns of physical action that determine how information is framed.</p>
+	<p>Like all data, "sense data" can only exist through active sanitation.</p>
+	<p>Nature is hte opposite of universality.  Evolution, technology, and society are life's relentless war against the particular.</p>
+	<hr />
+	<p class="aphorism_date">January 15, 2020</p>
+</div>
+
+<div>
+	<p>People cal reality random as a coping mechanism to obscure what it really is: nebulous.</p>
+	<hr />
+	<p class="aphorism_date">January 12, 2020</p>
+</div>
+
+<div>
+	<p>If you want to know the purpose of something, ask yourself what stubborn pattern couldn't exist without it.</p>
+	<hr />
+	<p class="aphorism_date">January 11, 2020</p>
+</div>
+
+<div>
+	<p>The subconscious operates as a material, formal, and final cause but never an efficient cause.</p>
+	<hr />
+	<p class="aphorism_date">January 11, 2020</p>
+</div>
+
+<div>
+	<p>Rhetoric is the thickness of discourse.</p>
+	<p>Discourse without rhetoric is computation.</p>
+	<hr />
+	<p class="aphorism_date">January 10, 2020</p>
+</div>
+
+<div>
+	<p>If you write bad poetry you'll do bad science.  Sorry, I don't make the rules.</p>
+	<hr />
+	<p class="aphorism_date">January 7, 2020</p>
+</div>
+
+<div>
+	<p>Philosophy, and for that matter, sicence, is a lot like when you're drawing a picture where instead of drawing a clean line you just sort of keep scribbling loose pencil marks until something emerges..</p>
+	<p>Pedants then find petty reasons to call it "fake" because the lines aren't clean enough.</p>
+	<hr />
+	<p class="aphorism_date">January 2, 2020</p>
+</div>
+
+<div>
+	<p>Being bored in the real world feels a lot better than being entertained by a skinnerian monstrosity.</p>
+	<hr />
+	<p class="aphorism_date">January 2, 2020</p>
+</div>
+
+<div>
+	<p>Resist the urge to complete a bunch of thoughts with a single keystone idea that links them into a system.  Appreciate the intermittent porousness of your prose.</p>
+	<hr />
+	<p class="aphorism_date">December 31, 2019</p>
+</div>
+
+<div>
+	<p>No texture without repetition.</p>
+	<p>No material without texture.</p>
+	<p>No prose without material.</p>
+	<hr />
+	<p class="aphorism_date">December 31, 2019</p>
+</div>
+
+<div>
+	<p>The meaning of a text is a question of where and how it exhibits permeability.</p>
+	<hr />
+	<p class="aphorism_date">December 29, 2019</p>
+</div>
+
+<div>
+	<p>The flood of moods that come rushing back when you have an unexpected visceral memory of the unarticulated heap you inevitably were a decade earlier.</p>
+	<hr />
+	<p class="aphorism_date">December 28, 2019</p>
+</div>
+
+<div>
+	<p>The egg is the object and the chicken is the morphism.</p>
+	<hr />
+	<p class="aphorism_date">December 27, 2019</p>
+</div>
+
+<div>
+	<p>Nerds think imperatively.</p>
+	<p>Artists think declaratively and leave operational semantics to the whims of the gods.</p>
+	<hr />
+	<p class="aphorism_date">December 27, 2019</p>
+</div>
+
+<div>
+	<p>Psychology is the infantile insistence that there exists an alternative to reading the fucking room.</p>
+	<hr />
+	<p class="aphorism_date">December 25, 2019</p>
+</div>
+
+<div>
+	<p>Every rapid period of intellectual growth was ultimatley a symptom of one thing: all the people I met who helped me open up.</p>
+	<hr />
+	<p class="aphorism_date">December 24, 2019</p>
+</div>
+
+<div>
+	<p>You never "get" art, you just continaully develop an increasingly nimble ear.</p>
+	<hr />
+	<p class="aphorism_date">December 22, 2019</p>
+</div>
+
+<div>
+	<p>If you tell me that poetry is logorrhea, I by and large agree, and in addition I think you should cultivate an appreciation for logorrhea.</p>
+	<hr />
+	<p class="aphorism_date">December 22, 2019</p>
+</div>
+
+<div>
+	<p>Don't read <i>into</i> it, just read it.</p>
+	<hr />
+	<p class="aphorism_date">December 22, 2019</p>
+</div>
+
+<div>
+	<p>The obsessive quest to weed problematic connotations out of language is the discursive equivalent of trying to "scientifically" manage a forest.</p>
+	<hr />
+	<p class="aphorism_date">December 21, 2019</p>
+</div>
+
+<div>
+	<p>The nature of community is extremely tacit and illegible and I often worry that reducing it to amateur poetry about being "organic" will lead people to chase the trappings of it instead of the real thing.</p>
+	<hr />
+	<p class="aphorism_date">December 18, 2019</p>
+</div>
+
+<div>
+	<p>Aesthetics is the interfaces we build to dissolve the prison of blindingly brilliant subjectivity.</p>
+	<hr />
+	<p class="aphorism_date">December 15, 2019</p>
+</div>
+
+<div>
+	<p>You can't prove the validity of your intuition to anything or anyone outside of it.</p>
+	<p>You realy only have two choices: decide something for yourself, or let someone or something do it for you.</p>
+	<hr />
+	<p class="aphorism_date">December 13, 2019</p>
+</div>
+
+<div>
+	<p>"since feeling is first" explains why sophists don't get laid, but you can't understand what it's saying if you're a sophists so the knowledge is only available to people who don't need it.</p>
+	<hr />
+	<p class="aphorism_date">December 12, 2019</p>
+</div>
+
+<div>
+	<p>Play for its own sake is a good thing and anyone who says otherwise is a repugnant arthropod.</p>
+	<hr />
+	<p class="aphorism_date">December 12, 2019</p>
+</div>
+
+<div>
+	<p>Your ideas are only as substantial as the interface they create with the world.</p>
+	<hr />
+	<p class="aphorism_date">December 11, 2019</p>
+</div>
+
+<div>
+	<p>There's something deeply fragile about nonfiction.  The sensibility you gain from literature or from mathematics or (some) philosophy is a skill, not something about truth or falsity, but arguments about the "real world" often turn out not to be worth the paper they're printed on.</p>
+	<hr />
+	<p class="aphorism_date">December 10, 2019</p>
+</div>
+
+<div>
+	<p>Progress comes from weirdos who make crazy (often but not always) impractical shit and don't have the sense (or the giveafuck) to maximize their own "utility".</p>
+	<p>People who are obsessed with self-improvement and "winning" are generally speaking the parasites.
+	<hr />
+	<p class="aphorism_date">December 8, 2019</p>
+</div>
+
+<div>
+	<p>Capital is operationalization.</p>
+	<hr />
+	<p class="aphorism_date">December 8, 2019</p>
+</div>
+
+<div>
+	<p>textiles -> computers; repetition -> generality.</p>
+	<hr />
+	<p class="aphorism_date">December 7, 2019</p>
+</div>
+
+<div>
+	<p>The medium is the message up to isomorphism.</p>
+	<p>McLuhan = semiotic homotopy</p>
+	<hr />
+	<p class="aphorism_date">December 6, 2019</p>
+</div>
+
+<div>
+	<p>The scientific replication crisis is a symptom of most "science" being simply unintelligible.  The language games of psychology, economics, neuroscience, nutrition, etc. simply have no tractable interface with any facet of physical or even social reality; they throw labels around and act shocked when 1 + "one" doesn't equal 2.0</p>
+	<hr />
+	<p class="aphorism_date">December 5, 2019</p>
+</div>
+
+<div>
+	<p>Constantly remind yourself that if you were really so sure about how the world works, everything would be easy and you'd be monstrously rich.</p>
+	<p>I'm not saying that success is proportional to intelligence, but I am saying that practical setbacks are a sign of <i>something</i> you don't know or understand.</p>
+	<p>Let the pain catabolize your pretenses.</p>
+	<hr />
+	<p class="aphorism_date">December 5, 2019</p>
+</div>
+
+<div>
+	<p>The people most vitriolic against philosophy tend to be people who have been unwittingly indoctrinated by really slipshod philosphy.</p>
+	<hr />
+	<p class="aphorism_date">December 4, 2019</p>
+</div>
+
+<div>
+	<p>If you don't have the self-discipline to play through the whole story and not skip to the end, you'll never know what you want and you wouldn't obtain it even if you did.</p>
+	<hr />
+	<p class="aphorism_date">December 3, 2019</p>
+</div>
+
+<div>
+	<p>Every time you step "outside" of living in order to get some kind of edge by "hacking" it, you shrink your bandwidth and destroy information.  Exercise discretion.</p>
+	<hr />
+	<p class="aphorism_date">December 1, 2019</p>
+</div>
+
+<div>
+	<p>Everything "imaginary" is based on very real relationships.</p>
+	<hr />
+	<p class="aphorism_date">December 1, 2019</p>
+</div>
+
+<div>
+	<p>Advice only becomes helpful when you'ove spent a million hours plugging away at something and there's actually some kind of substance to refine.</p>
+	<hr />
+	<p class="aphorism_date">December 1, 2019</p>
+</div>
+
+<div>
+	<p>The economic, technological, and political challenge of the 21st century is to harness beneficial network effects while simultaneously maintaining the variety and independence of smaller parts necessary for continual adaptation and avoidance of contagious destruction.</p>
+	<hr />
+	<p class="aphorism_date">November 30, 2019</p>
+</div>
+
+<div>
+	<p>every map is the germ of a territory, every use an unfolding into new terrain.</p>
+	<hr />
+	<p class="aphorism_date">November 29, 2019</p>
+</div>
+
+<div>
+	<p>I fear society losing everything idiomatic about it to technological "progress".</p>
+	<p>Senescence is the loss of idioms.</p>
+	<hr />
+	<p class="aphorism_date">November 29, 2019</p>
+</div>
+
 </body>
 </html>
