added more notes

--- a/notes/index.html
+++ b/notes/index.html
@@ -36,6 +36,8 @@
 	<li><a href = "taste.html">Taste is Necessary (May 2020)</a></li>	
 	<li><a href = "theory_like_poetry.html">Reading Theory "Like Poetry" (May 2020)</a></li>
 	<li><a href = "causes.html">On Aristotle's Causes (December 2019)</a></li>
+	<li><a href = "universality.html">Universality (November 2019)</a></li>
+	<li><a href = "verisimilitude.html">The Geometry of Verisimilitude (November 2019)</a></li>
 	<li><a href = "emergence.html">Notes On Properties and Emergence (October 2019)</a></li>
 	<li><a href = "whitney_biennial.html">Epistemology for the End of the World: Whitney Biennial Edition (September 2019)</a></li>
 	<li><a href = "dreams.html">Rough Theory of Dreams (April 2019)</a>
