--- a/notes/misc_notes.html
+++ b/notes/misc_notes.html
@@ -1294,5 +1294,142 @@
 	<p class="aphorism_date">November 29, 2019</p>
 </div>
 
+<div>
+	<p>Under the condition of maximum entropy, there is no distinction between the part and the whole.  Identifiable parts exist to the extent that there is redundancy.</p>
+	<p>An entity has parts insofar that it has grammar.</p>
+	<p>Parts are what survive when you break something apart.  Rules are what disappear when you do so.</p>
+	<p>Zorn's Lemma is the Rosetta Stone of mereology.</p>
+	<hr />
+	<p class="aphorism_date">November 28, 2019</p>
+</div>
+
+<div>
+	<p>If we only did what was obviously immediately useful there would be no civilization and no progress.</p>
+	<hr />
+	<p class="aphorism_date">November 28, 2019</p>
+</div>
+
+<div>
+	<p>There's a fundamental difference between cleverness and literacy.</p>
+	<p>Cleverness alone, outside of contrived institutional settings, cannot give you efficacy.</p>
+	<hr />
+	<p class="aphorism_date">November 27, 2019</p>
+</div>
+
+<div>
+	<p>The concept of artificial general intelligence is a scientifically unsound cover story for expanding the surveillance state.</p>
+	<hr />
+	<p class="aphorism_date">November 26, 2019</p>
+</div>
+
+<div>
+	<p>Skills, habits, and maps are all the same thing: crevices that you fall through, analogous to the way that gravity works in relativistic physics.</p>
+	<hr />
+	<p class="aphorism_date">November 24, 2019</p>
+</div>
+
+<div>
+	<p>Ecology is the study of context.</p>
+	<hr />
+	<p class="aphorism_date">November 24, 2019</p>
+</div>
+
+<div>
+	<p>When I make an ontological statement, I'm not saying it's the Truth; I'm just intimating the geography into which my own story has unfolded.</p>
+	<hr />
+	<p class="aphorism_date">November 23, 2019</p>
+</div>
+
+<div>
+	<p>A phenotype is ultimatley defined by a relationship between an organism and its environment; not a "property" in a vacuum.</p>
+	<p>(There's no such thing as "properties", those are just relationships.)</p>
+	<hr />
+	<p class="aphorism_date">November 23, 2019</p>
+</div>
+
+<div>
+	<p>You can't separate aesthetics from impracticality, aesthetics is the essence of surplus.</p>
+	<hr />
+	<p class="aphorism_date">November 22, 2019</p>
+</div>
+
+<div>
+	<p>Analytic philosophy is conceptual narcissism.</p>
+	<p>Narcissism is ethics divorced from ecology.</p>
+	<hr />
+	<p class="aphorism_date">November 21, 2019</p>
+</div>
+
+<div>
+	<p>The hardware/software distincion outside of actual computers is always nebulous and often meaningless, but the best way to view it is that software is that which remains invariant between actors.  A text may offer us each different affordances ("meanings"), but there is, in most cases, a common kernel that allows us to relate to one another through it.</p>
+	<p>This is not some a-priori "object" but an invariant that for whatever reason holds amongst the tangle of interactions.</p>
+	<p>The best example of such a thing I can think of right now is currency.  We may value things differently, and even have different ideas of what "value" even is, but money is a common interface through which our acts of valuation operate.</p>
+	<hr />
+	<p class="aphorism_date">November 18, 2019</p>
+</div>
+
+<div>
+	<p>You can't impose ordre on a complex system but you can engender catabolic processes.</p>
+	<hr />
+	<p class="aphorism_date">November 18, 2019</p>
+</div>
+
+<div>
+	<p>The distinction between organism and machine is ultimately a geometric one.</p>
+	<hr />
+	<p class="aphorism_date">November 16, 2019</p>
+</div>
+
+<div>
+	<p>There are people who consume books and people who read and neither one of these necessitates the other.</p>
+	<hr />
+	<p class="aphorism_date">November 13, 2019</p>
+</div>
+
+<div>
+	<p>You're at your most productive when you're doing something that's a little bit self-indulgent but not too self-indulgent.</p>
+	<hr />
+	<p class="aphorism_date">November 8, 2019</p>
+</div>
+
+<div>
+	<p>coevolution = deconstruction = semiosis.</p>
+	<hr />
+	<p class="aphorism_date">November 4, 2019</p>
+</div>
+
+<div>
+	<p>All subjectivity is a question of relationships to other things.  Objectivity is merely that which can be fenced off into a closed system with its own rules.</p>
+	<hr />
+	<p class="aphorism_date">November 3, 2019</p>
+</div>
+
+<div>
+	<p>Organisms repeat, machines generalize.</p>
+	<p>Depression is when too many of the repetitions of one's life ossify into generalities.</p>
+	<hr />
+	<p class="aphorism_date">November 3, 2019</p>
+</div>
+
+<div>
+	<p>Ideological differences by and large come down to a matter of taste.</p>
+	<p>No, I don't mean sentiments, I mean nebulous differences in how one chooses to read a text.</p>
+	<hr />
+	<p class="aphorism_date">November 3, 2019</p>
+</div>
+
+<div>
+	<p>Do not mistake rhetoric for logical proof.  The function of rhetoric is to alter the context of a debate, to rewrite the text in which it's situated.</p>
+	<p>It would be even more hazardous, however, to mistake it for merely shifting the goalposts.</p>
+	<hr />
+	<p class="aphorism_date">October 31, 2019</p>
+</div>
+
+<div>
+	<p>The idea that power and control are the same thing is a relic of cybernetics and neoclassical economics (which are the same thing anyway.)</p>
+	<hr />
+	<p class="aphorism_date">October 28, 2019</p>
+</div>
+
 </body>
 </html>
