adding first draft of hysteresis/commutativity chapter

--- a/actors_and_matters/index.html
+++ b/actors_and_matters/index.html
@@ -26,7 +26,7 @@
 		<li><a href="concepts/enactments_kernels.html">Enactments / Kernels</a></li>
 		<li>Trajectory / State</li>
 		<li><a href="concepts/affordances_coevolution.html">Affordances / Co-Evolution</a></li>
-		<li>Hysteresis / Commutativity</li>
+		<li><a href="concepts/hysteresis_commutativity.html">Hysteresis / Commutativity</a></li>
 		<li><a href="concepts/prototypes_syntax.html">Prototypes / Syntax</a></li>
 		<li><a href="concepts/narrative_data.html">Narrative / Data</a></li>
 		<li><a href="concepts/kairos_chronos.html">Kairos / Chronos</a></li>
