adding link from old to new edition of narrative engineering

--- a/essays/narrative_engineering_old_2019.html
+++ b/essays/narrative_engineering_old_2019.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Narrative Engineering</title>
+    <title>Narrative Engineering (2019)</title>
     <link href="https://fonts.googleapis.com/css?family=Lora|Montserrat|Raleway|Open+Sans|Crimson+Text&display=swap" rel="stylesheet">
     <link rel = "stylesheet"
    type = "text/css"
@@ -10,6 +10,8 @@
 <body>
 
 <div class="essay">
+
+    <p><em>There is now a new, much different, edition of this essay which can be found <a href="./narrative_engineering_2023">here</a></em>.</p>
 
     <h1>Narrative Engineering</h1>
 
