adding 'minor rationalism' essay

--- a/essays/index.html
+++ b/essays/index.html
@@ -10,6 +10,7 @@
 
 <ul>
 	<li><a href="narrative_engineering_2023.html">Narrative Engineering (NEW! 2023)</a></li>
+	<li><a href="minor_rationalism.html">Notes on "Minor Rationalism" (2022)</a></li>
 	<li><a href="utility.html">Imagine A Utility Function Stamping On A Human Face Forever (2020)</a></li>
 	<li><a href="narrative_engineering_old_2019.html">Narrative Engineering (OLD! 2019)</a></li>
 	<li><a href="against_allostasis.html">Against Allostasis (2015)</a></li>
