--- a/notes/index.html
+++ b/notes/index.html
@@ -14,6 +14,7 @@
 
 <ul>
 	<li><a href = "misc_notes.html">Miscellaneous Tiny Notes (Ongoing)</a></li>
+	<li><a href = "epigenesis_empiricism.html">The Epigenesis of Empiricism (August 2022)</a></li>
 	<li><a href = "initial_conditions.html">Initial Conditions & "Meta-Stability" (March 2021)</a></li>
 	<li><a href = "guttenberg.html">Guttenberg (March 2021)</a></li>
 	<li><a href = "ashby_measure_fractality.html">Ashby, Measure, & Fractality (February 2021)</a></li>
