--- a/essays/the_matter_at_hand.html
+++ b/essays/the_matter_at_hand.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Notes on "Minor Rationalism"</title>
+    <title>The Matter At Hand</title>
     <link href="https://fonts.googleapis.com/css?family=Lora|Montserrat|Raleway|Open+Sans|Crimson+Text&display=swap" rel="stylesheet">
     <link rel = "stylesheet"
    type = "text/css"
