--- a/notes/index.html
+++ b/notes/index.html
@@ -14,6 +14,7 @@
 
 <ul>
 	<li><a href = "misc_notes.html">Miscellaneous Tiny Notes (Ongoing)</a></li>
+	<li><a href = "fascism_2023.html">Fascism (May 2023)</a></li>
 	<li><a href = "the_subconscious.html">The Subconscious (January 2023)</a></li>
 	<li><a href = "epigenesis_empiricism.html">The Epigenesis of Empiricism (August 2022)</a></li>
 	<li><a href = "initial_conditions.html">Initial Conditions & "Meta-Stability" (March 2021)</a></li>
