--- a/notes/fascism_2023.html
+++ b/notes/fascism_2023.html
@@ -6,8 +6,8 @@
    href = "../style.css" />
 </head>
 <body>
-    <h2>Fascism (May 2023))</h2>
-    
+    <h2>Fascism (May 2023)</h2>
+
     <p>"Fascism" is admittedly a very fickle word, so if you ask me what I think it means: it's not simply authoritarianism, nor is it simply believing that the past was better, it's cargo cult authoritarianism based not on arbitrary nostalgia but naive holism.</p>
     <p>Specifically, it's based on the idea that prior to certain developments, there was a holistic system that was inherently composed and self-regulating in a way that was not simply modified or made worse later developments but outright ruptured.</p>
     <hr>
