adding 'interpretation for the rest of us' essay

--- a/essays/index.html
+++ b/essays/index.html
@@ -9,6 +9,7 @@
 <h1>Essays:</h1>
 
 <ul>
+	<li><a href="interpretation_for_the_rest_of_us.html">Interpretation for the Rest of Us (2024)</a></li>
 	<li><a href="narrative_engineering_2023.html">Narrative Engineering (NEW! 2023)</a></li>
 	<li><a href="the_matter_at_hand.html">The Matter At Hand (2022)</a></li>
 	<li><a href="minor_rationalism.html">Notes on "Minor Rationalism" (2021)</a></li>
